# async_amazon_ads_api_v1

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: AdvertisingAccounts_prod_3p.json  AmazonAdsAPISBMerged_prod_3p.json  AmazonAdsAPISDMerged_prod_3p.json  AmazonAdsAPISPMerged_prod_3p.json  Portfolios_prod_3p.json  SponsoredProducts_prod_3p.json  _gen_utils.py  download_spec.py  generate_all.py  generate_file_structure.py  generate_legacy_accounts_models.py  generate_legacy_profiles_models.py  generate_legacy_sb_rules.py  generate_legacy_sd_rules.py  generate_models.py  generate_portfolios.py  generate_sb_budget_rules.py  generate_sd_budget_rules.py  generate_sd_creatives.py  generate_sp_budget_rules.py  sponsoredBrands_40_openapi.json  sponsoredDisplay_30_openapi.yaml
src/amazon_ads_sdk/: __init__.py  _base.py  client.py  config.py  models.py
src/amazon_ads_sdk/client/: __init__.py  _ad_extensions.py  _ad_groups.py  _ads.py  _base.py  _campaigns.py  _context.py  _resource.py  _targets.py
src/amazon_ads_sdk/client/sb/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  advertising_deal_targets.py  advertising_deals.py  branded_keywords_pricings.py  campaigns.py  keyword_reservation_validations.py  recommendation_types.py  recommendations.py  targets.py
src/amazon_ads_sdk/client/sd/: __init__.py  ad_groups.py  ads.py  campaigns.py  targets.py
src/amazon_ads_sdk/client/sp/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  campaigns.py  targets.py
src/amazon_ads_sdk/models/: __init__.py  _ad_extensions.py  _ad_groups.py  _ads.py  _bids.py  _budgets.py  _campaigns.py  _creatives.py  _enums.py  _errors.py  _filters.py  _requests.py  _responses.py  _shared.py  _targets.py  base.py
src/amazon_ads_sdk/models/sb/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  advertising_deal_targets.py  advertising_deals.py  branded_keywords_pricings.py  campaigns.py  enums.py  keyword_reservation_validations.py  recommendation_types.py  recommendations.py  shared.py  targets.py
src/amazon_ads_sdk/models/sd/: __init__.py  ad_groups.py  ads.py  campaigns.py  enums.py  shared.py  targets.py
src/amazon_ads_sdk/models/sp/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  campaigns.py  enums.py  shared.py  targets.py
src/async_amazon_ads_api_v1/: __init__.py  _base.py  config.py  errors.py
src/async_amazon_ads_api_v1/client/legacy/: __init__.py  budget_rules.py  portfolios.py  sb_budget_rules.py  sb_rules.py  sd_budget_rules.py  sd_creatives.py  sd_rules.py  sp_budget_rules.py
src/async_amazon_ads_api_v1/client/legacy/accounts/: __init__.py  _base.py  account.py  profiles.py  terms_token.py
src/async_amazon_ads_api_v1/client/sb/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  advertising_deal_targets.py  advertising_deals.py  branded_keywords_pricings.py  campaigns.py  keyword_reservation_validations.py  recommendation_types.py  recommendations.py  targets.py
src/async_amazon_ads_api_v1/client/sd/: __init__.py  ad_groups.py  ads.py  campaigns.py  targets.py
src/async_amazon_ads_api_v1/client/sp/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  campaigns.py  targets.py
src/async_amazon_ads_api_v1/config/: __init__.py  loader.py  region.py  settings.py  token_cache.py  token_manager.py
src/async_amazon_ads_api_v1/models/_core/: lenient_enum.py
src/async_amazon_ads_api_v1/models/legacy/: __init__.py  budget_rules.py  enums.py  portfolios.py  sb_budget_rules.py  sb_rules.py  sd_budget_rules.py  sd_creatives.py  sd_rules.py  sp_budget_rules.py
src/async_amazon_ads_api_v1/models/legacy/accounts/: __init__.py  account.py  profiles.py  terms_token.py
src/async_amazon_ads_api_v1/models/sb/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  advertising_deal_targets.py  advertising_deals.py  branded_keywords_pricings.py  campaigns.py  enums.py  keyword_reservation_validations.py  recommendation_types.py  recommendations.py  reserved_target_pricings.py  shared.py  targets.py
src/async_amazon_ads_api_v1/models/sd/: __init__.py  ad_groups.py  ads.py  campaigns.py  enums.py  shared.py  targets.py
src/async_amazon_ads_api_v1/models/sp/: __init__.py  ad_extensions.py  ad_groups.py  ads.py  campaigns.py  enums.py  shared.py  targets.py
tests/: conftest.py  test_base.py  test_config.py  test_errors.py  test_init.py  test_lenient_enum.py  test_token_cache.py
tests/client/: test_mock_server_integration.py  test_resources.py  test_sb_client.py  test_sd_client.py  test_sp_client.py
tests/e2e/: PROGRESS.md  README.md  __init__.py  config.py  conftest.py  helpers.py  test_ads_api_context.py  test_profile_isolation.py  test_sp_ad_groups.py  test_sp_campaigns.py
