[project]
name = "amazon-ads-sdk"
version = "0.1.0"
description = "Amazon Ads API SDK for Sponsored Products — pure async"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Amazon Ads" }]
keywords = ["amazon", "ads", "advertising", "sponsored-products", "async"]

dependencies = ["httpx>=0.28.0", "pydantic>=2.10.0"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "black>=26.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amazon_ads_sdk"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/amazon_ads_sdk/models/*" = ["F403", "I001", "N815", "UP042"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
