[project]
name = "async-amazon-ads-api-v1"
dynamic = ["version"]
description = "Pure async Amazon Ads API v1 client — Sponsored Products, Sponsored Brands, Sponsored Display"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Amazon Ads" }]
keywords = ["amazon", "ads", "advertising", "sponsored-products", "sponsored-brands", "sponsored-display", "async", "api-v1"]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "black>=26.3.1",
    "pyrefly>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/async_amazon_ads_api_v1/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/async_amazon_ads_api_v1"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/async_amazon_ads_api_v1/errors.py" = ["N815"]
"src/async_amazon_ads_api_v1/models/*" = ["F403", "N815"]


[tool.pytest.ini_options]
markers = [
    "e2e: tests that call a live ads_v1_server over HTTP",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
    "src/async_amazon_ads_api_v1/models/sp/",
    "src/async_amazon_ads_api_v1/models/sb/",
    "scripts/",
]
